css/main.css
.piece {
	position: absolute;
}
.wrap {
	position: relative;
}
.relative {
	position: relative;
}
.fixed {
	position: fixed;
}
.padding {
	padding: 15px;
}
html, body {
	height: 100%;
}
.border {
	border: 1px solid black;
}
.absolute {
	position: absolute;
}
.inline {
	display: inline-block;
}
.circle {
	border-radius: 50%;
	background-color: white;
	box-shadow: 0 0 15px 1px white;
}
.noSelect {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
a {
	color: white;
	font-size: 25px;
	text-decoration: none;
	margin-left: 5px;
	margin-right: 5px;
	transition: all .2s ease-in-out;
	outline: 0;
}
a:hover {
	color: #fffabe;
	transform: scale(20);
}
i {
	z-index: 999;
	font-size: 25px;
	cursor: pointer;
}

/* Fonts */

h1 {
	font-family: 'Julius Sans One', sans-serif;
	text-shadow: #7c7c7c 0 0 5px;
	font-size: 5rem;
}
a {
	font-family: 'Pompiere', cursive;
}
h2 {
	font-family: 'Pompiere', cursive;
}
p {
	font-family: "Maven Pro",sans-serif;
}
h3 {
	font-family: 'Pompiere', cursive;
}

/**************** THE BUTTON TO CHANGE THE TIME *****************/

.changeTime {
	box-sizing: border-box;
	width: 60px;
	height: 60px;
	padding: 6px;
	text-align: center;
	background-color: #6dd6f6;
	position: absolute;
	z-index: 999;
	margin: 40px;
	border-radius: 25%;
	border: 2px solid white;
}
.iconWrap {
	box-sizing: border-box;
	width: 100%;
	height: 100%;
	background-color: #6dd6f6;
	border-radius: 25%;
	border: 1px solid white;
	color: white;
}
.icon-moon-2 {
	display: none;
}

/**************** THE OVERALL PICTURE *****************/

.landingWrap {
	width: 100%;
	height: 100vh;
}
.darknessWrap {
	width: 100%;
	height: 100vh;
	background-color: black;
	opacity: 0.4;
	position: absolute;
	z-index: 10;
	display: none;
}
.topLeaves {
}
.treesWrap {
	background-color: #66b04c;
	width: 100%;
	height: 100%;
	overflow: hidden;
}
.skyWrap {
	width: 100%;
	height: 240px;
	z-index: 1;
	overflow: hidden;
}
.stream {
	width: 300px;
	height: 100%;
	border-radius: 50%;
	box-shadow: 115px 55px 0 0 #3496c5;
	margin-left: 250px;
	margin-top: 40px;
	z-index: 0;
}
.fire {
	left: 50%;
	z-index: 20;
	bottom: 25%;
}
.bush1 {
	margin-left: 450px;
	margin-top: 150px;
	z-index: 2;
	display: none;
}
.contentWrap {
	text-align: center;
	padding-bottom: 50px;
	z-index: 1;
}


/**************** Navigaton Bar *****************/

.navWrap {
	width: 100%;
	text-align: center;
	width: 100%;
	top: 275px;
	z-index: 99;
	position: fixed;
}
.nav {
	background-color: gray;
	opacity: 0.8;
}

/**************** tear icons  *****************/

.tear {
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
	border: none;
	-webkit-border-radius: 80% 0 55% 50%/ 55% 0 80% 50%;
	border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
	font: normal 100%/normal Arial, Helvetica, sans-serif;
	color: rgba(0,0,0,1);
	-o-text-overflow: clip;
	text-overflow: clip;
	-webkit transform: rotateZ(-45deg);
	transform: rotateZ(-45deg);
}
.match, .drop, .leaf {
	margin-left: auto;
	margin-right: auto;
}
.titleWrap {
	margin: 30px;
}

/**************** ABOUT ME PAGE  *****************/

.aboutWrap {
	background-color: #fc941d;
}
.matchFlame1 {
	width: 40px;
	height: 40px;
	background-color: #feffa4;
}
.matchFlame2 {
	width: 25px;
	height: 25px;
	background-color: #f1420d;
	margin-top: -25px;
}
.matchStick {
	width: 5px;
	height: 20px;
	background-color: #6b3702;
}

/**************** PROJECTS PAGE  *****************/

.projectsWrap {
	background-color: #3496c5;
}
.droplet {
	width: 60px;
	height: 60px;
	background-color: #82c9ec;
	z-index: -1;
}
.shine {
	width: 30px;
	height: 35px;
	border-radius: 50%;
	box-shadow: 5px 5px 0 0 #cceaf9;
	margin-top: -50px;
	z-index: 1;
}
.projectsRow {
	margin: 25px;
}
.project {
	margin-bottom: 25px;
	background-color: #5cabd0;
}
.fullPic {
	width: 50%;
	height: auto;
	border-bottom: 1px solid black;
}
.opaqueOverlay {
	opacity: 0.2;
	background-color: white;
}
.leftArrow {
	width: 0;
	height: 0;
	border-top: 25px solid transparent;
	border-right: 25px solid #85c0dc;
	border-bottom: 25px solid transparent;
	cursor: pointer;
}
.rightArrow {
	width: 0;
	height: 0;
	border-top: 25px solid transparent;
	border-left: 25px solid #d6eaf3;
	border-bottom: 25px solid transparent;
	cursor: pointer;
}

/**************** CONTACT ME WRAP  *****************/

.contactWrap {
	background-color: #2faa19;
}
.leafBody {
	width: 50px;
	height: 50px;
	background-color: #127700;
	z-index: -1;
}
.stem {
	width: 5px;
	height: 10px;
	background-color: #127700;
}
.vein {
	width: 5px;
	height: 40px;
	background-color: #175402;
	margin-top: -50px;
	border-radius: 50% 50% 0 0;
	z-index: 1;
}
.aboutText {
	background-color: #fca94a;
	border: 1px sold black;
}
.contactBox {
	background-color: #58bb46;
}
.mediaLink {
	margin-right: 5px;
	margin-left: 5px;
}

